# lumiere

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/migrations/versions/: 2026_04_20_1642-2ecc3fe6c712_create_users_table.py  2026_04_20_1706-b6ce564f107d_create_servers_channels_chats_messages_.py  2026_04_20_1706-cb125f73b43c_create_guilds_channels_messages_tables.py  2026_04_21_1934-ff04ab12b4dd_add_chat_tables.py  2026_04_23_1712-40b6937e8cee_add_name_and_photo_url_to_chats.py  2026_04_29_1458-e58d7bcecb23_add_trigger_function_for_edited_at_.py  2026_05_05_2027-55756ee31fac_create_refresh_tokens_table.py  2026_05_20_1845-fda1ead4f74f_add_cascade_delete_for_serverorm.py  2026_05_30_2126-627a46b121a8_add_ondelete_cascade_for_server_members_.py
backend/src/: __init__.py  config.py  database.py  main.py  utils.py
backend/src/alembic/: env.py
backend/src/auth/: dependencies.py  mappers.py  models.py  repository.py  router.py  schemas.py  security.py  service.py  utils.py
backend/src/channel/: dependencies.py  enums.py  mappers.py  model.py  models.py  repository.py  schemas.py  service.py  unit_of_work.py
backend/src/chat/: dependencies.py  enums.py  exceptions.py  handlers.py  mappers.py  model.py  models.py  repositories.py  repository.py  router.py  schemas.py  service.py  sql_requests.py  unit_of_work.py  websocket.py
backend/src/core/: base_repository.py  config.py  dependencies.py  logging.py  router.py
backend/src/guild/: model.py
backend/src/message/: datamapper.py  dependencies.py  enums.py  exceptions.py  model.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/migrations/: env.py
backend/src/postgres/: base.py  engine.py  mixins.py  session.py  types.py
backend/src/server/: dependencies.py  enums.py  exceptions.py  mappers.py  models.py  repository.py  router.py  schemas.py  (+2 more)
backend/tests/: conftest.py  seeder.py  test_pubsub_manager.py  utils.py
(+84 files in other folders)
