[project]
name = "discord-backend"
version = "0.1.0"
description = "Discord project backend"
readme = "README.md"
requires-python = ">=3.14.3, <4"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.1",
]

[tool.mypy]
strict = true
show_error_codes = true
exclude = [".venv"]
