[project]
name = "discord-backend"
version = "0.1.0"
description = "Discord project backend"
readme = "README.md"
requires-python = ">=3.14.3, <4"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "black>=26.3.1",
    "fakeredis>=2.35.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
]

[tool.mypy]
strict = true
show_error_codes = true
exclude = [".venv"]
